SFDCProject/src/objects/WF_Note__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Workflow Notes</relationshipLabel>
        <relationshipName>Workflow_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Task__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Workflow Notes</relationshipLabel>
        <relationshipName>Workflow_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workflow Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Task__c</columns>
        <columns>Comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Workflow Note</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>